# gm

5nodes/: 0.sig  1.sig  10.sig  11.g  11.sig  12.g  12.sig  13.g  14.g  15.g  16.g  17.g  18.g  19.g  2.sig  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.sig  30.g  31.g  4.sig  5.sig  6.sig  7.sig  8.sig  9.sig
6nodes/: 0.sig  1.sig  10.sig  11.g  11.sig  12.g  12.sig  13.g  13.sig  14.g  15.g  16.g  17.g  18.g  19.g  2.sig  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  3.sig  30.g  31.g  4.sig  5.sig  6.sig  7.sig  8.sig  9.sig
7nodes/: 11.g  12.g  13.g  14.g  15.g  16.g  17.g  18.g  19.g  20.g  21.g  22.g  23.g  24.g  25.g  26.g  27.g  28.g  29.g  30.g  31.g
gm/: CMakeLists.txt  Makefile  main.cu
gm/inc/: common.h  nvml_helper.hpp
gm/src/: common.cpp
